# ai_monitor

./: .gitignore  HISTORY.md  README.md  monitor  pyproject.toml  tasks.md
ai_monitor/: __init__.py  __main__.py  parsing.py  providers.py  pty_session.py  ui.py
docs/superpowers/plans/: 2026-04-16-auth-fix-actions.md
docs/superpowers/specs/: 2026-04-16-auth-fix-actions-design.md
tests/: test_main.py  test_parsing.py  test_providers.py  test_ui.py
