[project]
name = "ai-monitor"
version = "0.1.0"
description = "Terminal monitor for Codex and Claude usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=15.0"]

[project.scripts]
monitor = "ai_monitor.__main__:main"

[tool.setuptools.packages.find]
include = ["ai_monitor*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
